force-app/main/default/objects/Porter_Service_Request__c/Porter_Service_Request__c.object-meta.xml
<CustomObject>
    <label>Porter Service Request</label>
    <nameField>
        <label>Porter Service Request</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Porter Service Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>