force-app/main/default/objects/Porter_Service_Request__c/fields/From_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Address__c</fullName>
    <label>From Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>