force-app/main/default/objects/Porter_Service_Request__c/fields/Move_Type__c.field-meta.xml
<CustomField>
    <fullName>Move_Type__c</fullName>
    <label>Move Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Household Move</fullName>
            </value>
            <value>
                <fullName>Full Pack &amp; Move</fullName>
            </value>
            <value>
                <fullName>Partial Move</fullName>
            </value>
            <value>
                <fullName>Long-Distance Move</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>