force-app/main/default/objects/Porter_Service_Request__c/fields/Moving_Date__c.field-meta.xml
<CustomField>
    <fullName>Moving_Date__c</fullName>
    <label>Moving Date</label>
    <type>DateTime</type>
</CustomField>