force-app/main/default/objects/Porter_Service_Request__c/fields/Porter_Detail__c.field-meta.xml
<CustomField>
    <fullName>Porter_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Porter Detail</label>
    <referenceTo>Porter_Details__c</referenceTo>
    <relationshipLabel>Porter Service Requests</relationshipLabel>
    <relationshipName>Porter_Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>