force-app/main/default/objects/Porter_Service_Request__c/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <label>To Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>