force-app/main/default/objects/Porter_Service_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Move_Type__c</columns>
    <columns>From_Address__c</columns>
    <columns>To_Address__c</columns>
    <columns>Moving_Date__c</columns>
    <columns>Service_Status__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>